--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,34 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "C/C++ Windows gdb 启动",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}\\${fileBasenameNoExtension}.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "miDebuggerPath": "C:\\Lib\\msys64\\mingw64\\bin\\gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "为 gdb 启用整齐打印",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "将反汇编风格设置为 Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug",
+            "name": "C/C++ MacOS lldb 启动",
             "program": "${workspaceFolder}/${fileBasenameNoExtension}",
             "terminal": "external",
             "args": [],
